--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
 </style>
 <body>
-    <form method="post" autocomplete="off">
+    <form autocomplete="off" netlify>
         <label>Nombre</label>
         <input type="text" placeholder="Escribe tu nombre">
 
