adding name tag

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <body>
     <form autocomplete="off" netlify>
         <label>Nombre</label>
-        <input type="text" placeholder="Escribe tu nombre">
+        <input type="text" name="name" placeholder="Escribe tu nombre">
 
         <label>Email</label>
-        <input type="text" placeholder="Escribe tu email">
+        <input type="email" name="email" placeholder="Escribe tu email">
 
         <label>Mensaje</label>
-        <input type="text" placeholder="Escribe tu mensaje">
+        <input type="text" name="mensaje" placeholder="Escribe tu mensaje">
 
         <input type="submit" placeholder="Enviar">
     </form>
