adding file box

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <label>Mensaje</label>
         <input type="text" name="mensaje" placeholder="Escribe tu mensaje">
 
+        <label>Archivo</label>
+        <input type="file" name="file" placeholder="Agregar un archivo">
+
         <input type="submit" placeholder="Enviar">
     </form>
 </body>
