--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </style>
 
 <body>
-    <form autocomplete="off" netlify>
+    <form autocomplete="off" netlify action="thanks.html">
         <label>Nombre</label>
         <input type="text" name="name" placeholder="Escribe tu nombre">
 
